added heading and gif img source to body of html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Git Practice BOOM</title>
   </head>
   <body>
-
+    <header>Roger Checking</header>
+    <div class="superTroopers">Unhinge the jaw Thorney</div>
+    <img src="wrongname.gif" alt="HTML5 Icon" style="width:128px;height:128px;">
   </body>
 </html>
