changed gif source and styled the second heading

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Git Practice BOOM</title>
+    <link rel='stylesheet' href="style.css">
   </head>
   <body>
     <header>Roger Checking</header>
     <div class="superTroopers">Unhinge the jaw Thorney</div>
-    <img src="wrongname.gif" alt="HTML5 Icon" style="width:128px;height:128px;">
+    <iframe src="http://gph.to/1Rr8Ksr" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/downvote-super-CTNGCPCbneCnS">via GIPHY</a></p>
   </body>
 </html>
