added test list to html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <header>Roger Checking</header>
     <div class="superTroopers">Unhinge the jaw Thorney</div>
     <iframe src="http://gph.to/1Rr8Ksr" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/downvote-super-CTNGCPCbneCnS">via GIPHY</a></p>
+    <ul>
+      <li>list test</li>
+    </ul>
   </body>
 </html>
